--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ header nav {
 header nav a {
     font-family: var(--font-family-secondary);
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     text-decoration: none;
     color: var(--color-tertiary);
 }
@@ -45,19 +45,19 @@ main {
 }
 
 main section {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 82px;
 }
 
 main section h1 {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--font-family-primary);
 }
 
 main section div p {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--font-family-secondary);
 }
 
@@ -76,15 +76,15 @@ main section .links {
 main section .links h2 {
     font-family: var(--font-family-primary);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 main section .links a {
     border: 2px solid var(--color-tertiary);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--color-secondary);
@@ -102,7 +102,7 @@ main section .links a:hover {
 }
 
 main section .links a img {
-    width: 24px;
+    width: 1.8rem;
 }
 
 main section h1 strong {
@@ -110,7 +110,7 @@ main section h1 strong {
 }
 
 main img {
-    width: 400px;
+    width: 50%;
 }
 
 footer {
@@ -120,5 +120,24 @@ footer {
     text-align: center;
     font-family: var(--font-family-secondary);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
+}
+
+@media (max-width:1200px) {
+    header {
+        padding: 6%;
+    }
+
+    header nav {
+        justify-content: center;
+    }
+
+    main {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    main section {
+        width: auto;
+    }
 }
